--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,12 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
