--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,7 @@
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/**/*",
+      "src": "/(.*)",
       "dest": "/",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 
